# ray-tracer

./: .clang-format  .gitignore  CMakeLists.txt
.VSCodeCounter/2025-10-22_17-04-42/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
apps/: anim_test.cpp  clock_face.cpp  draw_black_square_emcc.cpp  draw_circle.cpp  draw_shaded_circle.cpp  first_scene.cpp  generated_scene.cpp  plot_projectile.cpp  sphere_on_plane.cpp
build_debug/: CMakeCache.txt  Makefile  clock_face  draw_circle  draw_shaded_circle  first_scene  misc_tests  plot_projectile  unit_tests
build_debug/generated_images/: scene1.ppm
build_emscripten/: CMakeCache.txt  Makefile  first_scene.js  sphere_on_plane.js  sphere_on_plane.wasm
build_release/: CMakeCache.txt  Makefile  anim_test  misc_tests  sphere_on_plane  unit_tests
docs/: first_scene.wasm  index.html  script.js  sphere_on_plane.wasm
include/ray_tracer/camera/: camera.h
include/ray_tracer/demo/: cannon.h
include/ray_tracer/geometry/: intersection.h  plane.h  shape.h  sphere.h
include/ray_tracer/helpers/: computation.h
include/ray_tracer/img/: canvas.h  color.h
include/ray_tracer/lighting/: light.h  material.h  pattern.h
include/ray_tracer/math/: matrix.h  ray.h  transform.h  tuple.h  util.h
include/ray_tracer/world/: world.h
src/camera/: camera.cpp
src/geometry/: intersection.cpp  plane.cpp  sphere.cpp
src/helpers/: computation.cpp
src/img/: canvas.cpp
src/lighting/: light.cpp  material.cpp  pattern.cpp
src/math/: matrix.cpp  transform.cpp  util.cpp
src/world/: world.cpp
tests/: camera_tests.cpp  canvas_tests.cpp  color_tests.cpp  geo_tests.cpp  intersection_tests.cpp  light_tests.cpp  matrix_tests.cpp  misc_tests.cpp  ray_tests.cpp  sphere_tests.cpp  test_helpers.h  transform_tests.cpp  world_tests.cpp
web/: index.html
